[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  'numpy',
  'networkx',
  'ninja',
]
name = "orbit-count"
requires-python = ">=3.7"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-xdist',
    'memory_profiler',
    'ruff',
    'pre-commit',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-n auto"

[tool.lint.ruff]
line-length = 80
target-version = "py37"

[tool.lint.ruff.pydocstyle]
convention = "google"
