[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
dependencies = [
  'numpy',
  'networkx',
]
name = "orbit-count"
requires-python = ">=3.7"
version = "0.1.0"
description="Python bindings for the ORbit Counting Algorithm"
readme = "README.md"
authors = [
  { name = "Max Planck Institute of Biochemistry, MLSB" },
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-xdist',
    'memory_profiler',
    'ruff',
    'pre-commit',
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"