[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
dependencies = [
  'numpy',
  'networkx',
]
name = "orbit-count"
requires-python = ">=3.7"
version = "0.1.0"
description="Python bindings for the ORbit Counting Algorithm"
readme = "README.md"
authors = [
  { name = "Max Planck Institute of Biochemistry, MLSB" },
]
license = {text = "The source of this package is licensed under GPL v3. The wheels may bundle an external implementation of OpenMP as a dynamically linked library. We refer to LICENSE.wheel.md for further information."}

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-xdist',
    'memory_profiler',
    'ruff',
    'pre-commit',
]

[tool.setuptools.package-data]
license-files = { include = ["LICENSE.md", "LICENSE.wheel.md"] }

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"

[tool.cibuildwheel]
test-requires = ["pytest", "memory_profiler"]
test-command = "pytest {project}/tests"
build = ["3.8", "3.9", "3.10", "3.11", "3.12"]
archs = ["x86_64", "arm64"]